Work in progress, due to new Go restrictions this might not work any longer.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "chipmunk"]
-	path = chipmunk
+[submodule "Chipmunk2D"]
+	path = Chipmunk2D
 	url = git@github.com:trichner/Chipmunk2D.git
